--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "sequelize": "^6.23.2",
     "sqlite3": "^5.1.1"
   }
 }
